calico/travisworker/opentoolchain-ns-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: opentoolchain-ns
  namespace: opentoolchain
spec:
  types:
  - Egress
  - Ingress
