calico/travisworker/travis-worker-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: travis-worker
  namespace: opentoolchain
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns' && projectcalico.org/namespace == 'kube-system'
      namespaceSelector: all()
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 53
      selector: k8s-app == 'kube-dns' && projectcalico.org/namespace == 'kube-system'
      namespaceSelector: all()
    protocol: TCP
  - action: Allow
    destination:
      selector: app == 'travis-registry'
  - action: Deny
    destination:
      selector: ibm.role == 'worker_private' || ibm.role == 'worker_public'
  - action: Allow
    destination:
      nets:
      - 0.0.0.0/0
      notNets:
      - 172.16.0.0/12
  selector: app == 'travis-worker'
  types:
  - Egress
